# lalo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pr.yml  release.yml
docs/: TESTING.md
lalo/: __init__.py  audio_manager.py  checkpoint.py  cli.py  config.py  epub_parser.py  exceptions.py  parallel_processor.py  text_normalization.py  tts_engine.py  utils.py
scripts/: README.md  merge_m4b.sh
tests/: __init__.py  test_audio_manager.py  test_checkpoint.py  test_epub_parser.py  test_exceptions.py  test_parallel_processor.py  test_text_normalization.py  test_tts_engine.py  test_utils.py
tests/e2e/: README.md  __init__.py  conftest.py  test_e2e_cli_basic.py  test_e2e_convert_formats.py  test_e2e_convert_modes.py  test_e2e_convert_parallel.py  test_e2e_error_handling.py  test_e2e_languages.py  utils.py
tests/e2e/fixtures/epubs/: pg1513-images-3.epub  pg2591-images-3.epub  pg2701-images-3.epub  pg54829-images-3.epub
tests/integration/: conftest.py  test_epub_to_chapters.py
